@@ -1,3 +1,7 @@
+2016-04-18  Charlie Zender  <zender@uci.edu>
+
+	* Copy missing calendar to temporal bounds to aid debugging
+
 2016-04-17  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.6.0-beta02 release procedure:
